// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signin /> calls the submit handler when button is clicked 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Welcome Back
              </h1>
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="auth-form-input"
                name="email"
                placeholder="Email"
                required=""
                type="email"
                value="email@gmail.com"
              />
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value="password"
              />
              <div
                id="action-button-container"
              >
                <button
                  id="sign-up-button"
                  type="submit"
                >
                  Login
                </button>
                <span
                  id="forgot-password"
                >
                  <a
                    href="/forgotpassword"
                  >
                    Forgot Password?
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signin /> renders an empty form 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Welcome Back
              </h1>
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="auth-form-input"
                name="email"
                placeholder="Email"
                required=""
                type="email"
                value=""
              />
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <div
                id="action-button-container"
              >
                <button
                  id="sign-up-button"
                  type="submit"
                >
                  Login
                </button>
                <span
                  id="forgot-password"
                >
                  <a
                    href="/forgotpassword"
                  >
                    Forgot Password?
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signin /> renders text in the form input 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Welcome Back
              </h1>
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="auth-form-input"
                name="email"
                placeholder="Email"
                required=""
                type="email"
                value="email@gmail.com"
              />
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <div
                id="action-button-container"
              >
                <button
                  id="sign-up-button"
                  type="submit"
                >
                  Login
                </button>
                <span
                  id="forgot-password"
                >
                  <a
                    href="/forgotpassword"
                  >
                    Forgot Password?
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
